--- a/404.md
+++ b/404.md
@@ -3,5 +3,5 @@ permalink: /404.html
 ---
 
 <audio autoplay loop preload="auto" src="https://litdevs.org/tvii.mp3"></audio>
-<h2 style="margin-bottom: 0;">Nonexistence</h2>
+<h2>Nonexistence</h2>
 The page you are looking for could not be found. It may have been deleted.
